cf/rancher-ec2.yml
Description: This template creates EC2 instance for Rancher on AWS

Parameters:
  KeyPairName:
    Type: AWS::EC2::KeyPair::KeyName
    Description: "Name of an existing EC2 KeyPair to enable SSH access to the instance"

Resources:
  RancherUser:
    Type: AWS::IAM::User
    Properties:
      UserName: rancher-user
  RancherPolicy:
    Type: AWS::IAM::Policy
    Properties:
      PolicyDocument:
        {
          "Version": "2012-10-17",
          "Statement": [{ "Effect": "Allow", "Action": "*", "Resource": "*" }],
        }
      PolicyName: rancher-policy
      Users:
        - !Ref RancherUser
  IAMKeys:
    Type: AWS::IAM::AccessKey
    Properties:
      UserName: !Ref RancherUser
  RancherSecurityGroup:
    Type: "AWS::EC2::SecurityGroup"
    Properties:
      GroupName: rancher-sg
      GroupDescription: HTTP(S)
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: "80"
          ToPort: "80"
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: "22"
          ToPort: "22"
          CidrIp: 0.0.0.0/0
      Tags:
        - Key: Name
          Value: rancher-sg
  RancherEC2:
    Type: "AWS::EC2::Instance"
    Properties:
      ImageId: ami-085925f297f89fce1
      InstanceType: m5.large
      SecurityGroupIds:
        - !Ref RancherSecurityGroup
      KeyName: !Ref KeyPairName
      Tags:
        - Key: Name
          Value: rancher-ec2

Outputs:
  AccessKey:
    Description: IAM user Access Key for Rancher
    Value: !Ref IAMKeys
  SecretAccessKey:
    Description: IAM user Secret Access Key for Rancher
    Value: !GetAtt IAMKeys.SecretAccessKey
  MoodlePublicIp:
    Description: Rancher public IP
    Value: !GetAtt RancherEC2.PublicIp
